--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,24 @@ body {
     font-size: 24px;
     background-color: #fff;
     color: #22356F;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 9999;
+    overflow-x: hidden;
 }
 header {
     display: flex;
-    z-index: 100;
+    box-sizing: border-box;
 }
 .header-left {
-    flex: 0 0 65%;
+    flex: 0 0 66%;
     padding-left: 12.5%;
     background-color: #F4F9E2;
-    z-index: -2;
+    padding-bottom: 78px;
+}
+.header-right {
+    flex: 0 0 34%;
+    z-index: 9999;
 }
 nav {
     display: flex;
@@ -26,7 +34,6 @@ nav {
     letter-spacing: -0.035em;
     color: #62D0DF;
     text-decoration: none;
-    z-index: 100;
 }
 .nav-list {
     display: flex;
@@ -64,40 +71,37 @@ nav {
 .info-block {
     letter-spacing: -0.7px;
 }
-.introduction {
-    z-index: 100;
-}
 .radius-bg-1 {
     position: absolute;
     transform: rotate(-31deg);
     border-radius: 312.159px;
     top: 88px;
     right: -200px;
-    z-index: -1;
     overflow: hidden;
+    z-index: 10;
 }
 .bg-1 {
     background-image: url(../img/radius-bg.png);
     background-size: 75%;
     background-repeat: no-repeat;
-    background-position: 115px -10px;
+    background-position: 125px 39px;
     transform: rotate(31deg);
     margin-bottom: -100px;
     margin-left: -120px;
-    margin-top: -100px;
+    margin-top: -150px;
     margin-right: 100px;
     width: 833px;
-    height: 719px;
+    height: 773px;
 }
 .radius-bg-2 {
     position: absolute;
-    background:#EDFDFF;
+    background: #EDFDFF;
     border-radius: 312.159px;
     transform: rotate(30deg);
     top: -100px;
-    right: -60px;
-    padding: 400px 270px 400px 270px;
-    z-index: -1;
+    right: -9px;
+    padding: 400px 270px 400px 237px;
+    z-index: 10;
 }
 .company-name-2 {
     margin-top: 153px;
